tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-numeric-index/expected.err
Error: invalid index on symbolic subscript array 'foo'
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-aggregate-numeric-index/input.k65:6:12 ]
   │
 6 │     lda foo[1]
   │            ─┬─  
   │             ╰─── here
   │ 
   │ Help: use '.field' or '[.field]' for named field access
───╯
